update loggin + add new swagger endpoints
